script creacion de viajes siempre timbra